# Copyright (C) 2012-2015  CEA/DEN, EDF R&D, OPEN CASCADE
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

# --- options ---

# additional include directories
INCLUDE_DIRECTORIES(
  ${CAS_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/src/FromOCCT/PTKernel
  ${CMAKE_CURRENT_SOURCE_DIR}
)

# additional preprocessor / compiler flags
ADD_DEFINITIONS(
  ${CAS_DEFINITIONS}
  )

# libraries to link to
SET(_link_LIBRARIES
  ${CAS_TKMath} ${CAS_TKernel} ${CAS_TKG2d}
  ${CAS_TKG3d} ${CAS_TKBRep}
  PTKernel
  )

# --- headers ---

SET(GEOM_HEADERS
  Handle_MgtBRep_TranslateTool1.hxx
  Handle_MgtBRep_TranslateTool.hxx
  Handle_MgtTopoDS_TranslateTool1.hxx
  Handle_MgtTopoDS_TranslateTool.hxx
  Handle_PBRep_Curve3D.hxx
  Handle_PBRep_CurveOn2Surfaces.hxx
  Handle_PBRep_CurveOnClosedSurface.hxx
  Handle_PBRep_CurveOnSurface.hxx
  Handle_PBRep_CurveRepresentation.hxx
  Handle_PBRep_GCurve.hxx
  Handle_PBRep_PointOnCurve.hxx
  Handle_PBRep_PointOnCurveOnSurface.hxx
  Handle_PBRep_PointOnSurface.hxx
  Handle_PBRep_PointRepresentation.hxx
  Handle_PBRep_PointsOnSurface.hxx
  Handle_PBRep_Polygon3D.hxx
  Handle_PBRep_PolygonOnClosedSurface.hxx
  Handle_PBRep_PolygonOnClosedTriangulation.hxx
  Handle_PBRep_PolygonOnSurface.hxx
  Handle_PBRep_PolygonOnTriangulation.hxx
  Handle_PBRep_TEdge1.hxx
  Handle_PBRep_TEdge.hxx
  Handle_PBRep_TFace1.hxx
  Handle_PBRep_TFace.hxx
  Handle_PBRep_TVertex1.hxx
  Handle_PBRep_TVertex.hxx
  Handle_PColgp_HArray1OfCirc2d.hxx
  Handle_PColgp_HArray1OfDir2d.hxx
  Handle_PColgp_HArray1OfDir.hxx
  Handle_PColgp_HArray1OfLin2d.hxx
  Handle_PColgp_HArray1OfPnt2d.hxx
  Handle_PColgp_HArray1OfPnt.hxx
  Handle_PColgp_HArray1OfVec2d.hxx
  Handle_PColgp_HArray1OfVec.hxx
  Handle_PColgp_HArray1OfXY.hxx
  Handle_PColgp_HArray1OfXYZ.hxx
  Handle_PColgp_HArray2OfCirc2d.hxx
  Handle_PColgp_HArray2OfDir2d.hxx
  Handle_PColgp_HArray2OfDir.hxx
  Handle_PColgp_HArray2OfLin2d.hxx
  Handle_PColgp_HArray2OfPnt2d.hxx
  Handle_PColgp_HArray2OfPnt.hxx
  Handle_PColgp_HArray2OfVec2d.hxx
  Handle_PColgp_HArray2OfVec.hxx
  Handle_PColgp_HArray2OfXY.hxx
  Handle_PColgp_HArray2OfXYZ.hxx
  Handle_PColgp_HSequenceOfDir.hxx
  Handle_PColgp_HSequenceOfPnt.hxx
  Handle_PColgp_HSequenceOfVec.hxx
  Handle_PColgp_HSequenceOfXYZ.hxx
  Handle_PColgp_SeqNodeOfHSequenceOfDir.hxx
  Handle_PColgp_SeqNodeOfHSequenceOfPnt.hxx
  Handle_PColgp_SeqNodeOfHSequenceOfVec.hxx
  Handle_PColgp_SeqNodeOfHSequenceOfXYZ.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfCirc2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfDir2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfDir.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfLin2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfPnt2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfPnt.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfVec2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfVec.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfXY.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray1OfXYZ.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfCirc2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfDir2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfDir.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfLin2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfPnt2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfPnt.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfVec2d.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfVec.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfXY.hxx
  Handle_PColgp_VArrayNodeOfFieldOfHArray2OfXYZ.hxx
  Handle_PGeom2d_AxisPlacement.hxx
  Handle_PGeom2d_BezierCurve.hxx
  Handle_PGeom2d_BoundedCurve.hxx
  Handle_PGeom2d_BSplineCurve.hxx
  Handle_PGeom2d_CartesianPoint.hxx
  Handle_PGeom2d_Circle.hxx
  Handle_PGeom2d_Conic.hxx
  Handle_PGeom2d_Curve.hxx
  Handle_PGeom2d_Direction.hxx
  Handle_PGeom2d_Ellipse.hxx
  Handle_PGeom2d_Geometry.hxx
  Handle_PGeom2d_Hyperbola.hxx
  Handle_PGeom2d_Line.hxx
  Handle_PGeom2d_OffsetCurve.hxx
  Handle_PGeom2d_Parabola.hxx
  Handle_PGeom2d_Point.hxx
  Handle_PGeom2d_Transformation.hxx
  Handle_PGeom2d_TrimmedCurve.hxx
  Handle_PGeom2d_Vector.hxx
  Handle_PGeom2d_VectorWithMagnitude.hxx
  Handle_PGeom_Axis1Placement.hxx
  Handle_PGeom_Axis2Placement.hxx
  Handle_PGeom_AxisPlacement.hxx
  Handle_PGeom_BezierCurve.hxx
  Handle_PGeom_BezierSurface.hxx
  Handle_PGeom_BoundedCurve.hxx
  Handle_PGeom_BoundedSurface.hxx
  Handle_PGeom_BSplineCurve.hxx
  Handle_PGeom_BSplineSurface.hxx
  Handle_PGeom_CartesianPoint.hxx
  Handle_PGeom_Circle.hxx
  Handle_PGeom_ConicalSurface.hxx
  Handle_PGeom_Conic.hxx
  Handle_PGeom_Curve.hxx
  Handle_PGeom_CylindricalSurface.hxx
  Handle_PGeom_Direction.hxx
  Handle_PGeom_ElementarySurface.hxx
  Handle_PGeom_Ellipse.hxx
  Handle_PGeom_Geometry.hxx
  Handle_PGeom_Hyperbola.hxx
  Handle_PGeom_Line.hxx
  Handle_PGeom_OffsetCurve.hxx
  Handle_PGeom_OffsetSurface.hxx
  Handle_PGeom_Parabola.hxx
  Handle_PGeom_Plane.hxx
  Handle_PGeom_Point.hxx
  Handle_PGeom_RectangularTrimmedSurface.hxx
  Handle_PGeom_SphericalSurface.hxx
  Handle_PGeom_Surface.hxx
  Handle_PGeom_SurfaceOfLinearExtrusion.hxx
  Handle_PGeom_SurfaceOfRevolution.hxx
  Handle_PGeom_SweptSurface.hxx
  Handle_PGeom_ToroidalSurface.hxx
  Handle_PGeom_Transformation.hxx
  Handle_PGeom_TrimmedCurve.hxx
  Handle_PGeom_Vector.hxx
  Handle_PGeom_VectorWithMagnitude.hxx
  Handle_PPoly_HArray1OfTriangle.hxx
  Handle_PPoly_Polygon2D.hxx
  Handle_PPoly_Polygon3D.hxx
  Handle_PPoly_PolygonOnTriangulation.hxx
  Handle_PPoly_Triangulation.hxx
  Handle_PPoly_VArrayNodeOfFieldOfHArray1OfTriangle.hxx
  Handle_PTopLoc_Datum3D.hxx
  Handle_PTopLoc_ItemLocation.hxx
  Handle_PTopoDS_Compound.hxx
  Handle_PTopoDS_CompSolid.hxx
  Handle_PTopoDS_Edge.hxx
  Handle_PTopoDS_Face.hxx
  Handle_PTopoDS_HArray1OfHShape.hxx
  Handle_PTopoDS_HArray1OfShape1.hxx
  Handle_PTopoDS_HShape.hxx
  Handle_PTopoDS_Shell.hxx
  Handle_PTopoDS_Solid.hxx
  Handle_PTopoDS_TCompound1.hxx
  Handle_PTopoDS_TCompound.hxx
  Handle_PTopoDS_TCompSolid1.hxx
  Handle_PTopoDS_TCompSolid.hxx
  Handle_PTopoDS_TEdge1.hxx
  Handle_PTopoDS_TEdge.hxx
  Handle_PTopoDS_TFace1.hxx
  Handle_PTopoDS_TFace.hxx
  Handle_PTopoDS_TShape1.hxx
  Handle_PTopoDS_TShape.hxx
  Handle_PTopoDS_TShell1.hxx
  Handle_PTopoDS_TShell.hxx
  Handle_PTopoDS_TSolid1.hxx
  Handle_PTopoDS_TSolid.hxx
  Handle_PTopoDS_TVertex1.hxx
  Handle_PTopoDS_TVertex.hxx
  Handle_PTopoDS_TWire1.hxx
  Handle_PTopoDS_TWire.hxx
  Handle_PTopoDS_VArrayNodeOfFieldOfHArray1OfHShape.hxx
  Handle_PTopoDS_VArrayNodeOfFieldOfHArray1OfShape1.hxx
  Handle_PTopoDS_Vertex.hxx
  Handle_PTopoDS_Wire.hxx
  MgtBRep.hxx
  MgtBRep.ixx
  MgtBRep.jxx
  MgtBRep_TranslateTool1.hxx
  MgtBRep_TranslateTool1.ixx
  MgtBRep_TranslateTool1.jxx
  MgtBRep_TranslateTool.hxx
  MgtBRep_TranslateTool.ixx
  MgtBRep_TranslateTool.jxx
  MgtBRep_TriangleMode.hxx
  MgtGeom2d.hxx
  MgtGeom2d.ixx
  MgtGeom2d.jxx
  MgtGeom.hxx
  MgtGeom.ixx
  MgtGeom.jxx
  MgtPoly.hxx
  MgtPoly.ixx
  MgtPoly.jxx
  MgtTopLoc.hxx
  MgtTopLoc.ixx
  MgtTopLoc.jxx
  MgtTopoDS.hxx
  MgtTopoDS.ixx
  MgtTopoDS.jxx
  MgtTopoDS_TranslateTool1.hxx
  MgtTopoDS_TranslateTool1.ixx
  MgtTopoDS_TranslateTool1.jxx
  MgtTopoDS_TranslateTool.hxx
  MgtTopoDS_TranslateTool.ixx
  MgtTopoDS_TranslateTool.jxx
  PBRep_Curve3D.hxx
  PBRep_Curve3D.ixx
  PBRep_Curve3D.jxx
  PBRep_CurveOn2Surfaces.hxx
  PBRep_CurveOn2Surfaces.ixx
  PBRep_CurveOn2Surfaces.jxx
  PBRep_CurveOnClosedSurface.hxx
  PBRep_CurveOnClosedSurface.ixx
  PBRep_CurveOnClosedSurface.jxx
  PBRep_CurveOnSurface.hxx
  PBRep_CurveOnSurface.ixx
  PBRep_CurveOnSurface.jxx
  PBRep_CurveRepresentation.hxx
  PBRep_CurveRepresentation.ixx
  PBRep_CurveRepresentation.jxx
  PBRep_GCurve.hxx
  PBRep_GCurve.ixx
  PBRep_GCurve.jxx
  PBRep_PointOnCurve.hxx
  PBRep_PointOnCurve.ixx
  PBRep_PointOnCurve.jxx
  PBRep_PointOnCurveOnSurface.hxx
  PBRep_PointOnCurveOnSurface.ixx
  PBRep_PointOnCurveOnSurface.jxx
  PBRep_PointOnSurface.hxx
  PBRep_PointOnSurface.ixx
  PBRep_PointOnSurface.jxx
  PBRep_PointRepresentation.hxx
  PBRep_PointRepresentation.ixx
  PBRep_PointRepresentation.jxx
  PBRep_PointsOnSurface.hxx
  PBRep_PointsOnSurface.ixx
  PBRep_PointsOnSurface.jxx
  PBRep_Polygon3D.hxx
  PBRep_Polygon3D.ixx
  PBRep_Polygon3D.jxx
  PBRep_PolygonOnClosedSurface.hxx
  PBRep_PolygonOnClosedSurface.ixx
  PBRep_PolygonOnClosedSurface.jxx
  PBRep_PolygonOnClosedTriangulation.hxx
  PBRep_PolygonOnClosedTriangulation.ixx
  PBRep_PolygonOnClosedTriangulation.jxx
  PBRep_PolygonOnSurface.hxx
  PBRep_PolygonOnSurface.ixx
  PBRep_PolygonOnSurface.jxx
  PBRep_PolygonOnTriangulation.hxx
  PBRep_PolygonOnTriangulation.ixx
  PBRep_PolygonOnTriangulation.jxx
  PBRep_TEdge1.hxx
  PBRep_TEdge1.ixx
  PBRep_TEdge1.jxx
  PBRep_TEdge.hxx
  PBRep_TEdge.ixx
  PBRep_TEdge.jxx
  PBRep_TFace1.hxx
  PBRep_TFace1.ixx
  PBRep_TFace1.jxx
  PBRep_TFace.hxx
  PBRep_TFace.ixx
  PBRep_TFace.jxx
  PBRep_TVertex1.hxx
  PBRep_TVertex1.ixx
  PBRep_TVertex1.jxx
  PBRep_TVertex.hxx
  PBRep_TVertex.ixx
  PBRep_TVertex.jxx
  PColgp_FieldOfHArray1OfCirc2d.hxx
  PColgp_FieldOfHArray1OfDir2d.hxx
  PColgp_FieldOfHArray1OfDir.hxx
  PColgp_FieldOfHArray1OfLin2d.hxx
  PColgp_FieldOfHArray1OfPnt2d.hxx
  PColgp_FieldOfHArray1OfPnt.hxx
  PColgp_FieldOfHArray1OfVec2d.hxx
  PColgp_FieldOfHArray1OfVec.hxx
  PColgp_FieldOfHArray1OfXY.hxx
  PColgp_FieldOfHArray1OfXYZ.hxx
  PColgp_FieldOfHArray2OfCirc2d.hxx
  PColgp_FieldOfHArray2OfDir2d.hxx
  PColgp_FieldOfHArray2OfDir.hxx
  PColgp_FieldOfHArray2OfLin2d.hxx
  PColgp_FieldOfHArray2OfPnt2d.hxx
  PColgp_FieldOfHArray2OfPnt.hxx
  PColgp_FieldOfHArray2OfVec2d.hxx
  PColgp_FieldOfHArray2OfVec.hxx
  PColgp_FieldOfHArray2OfXY.hxx
  PColgp_FieldOfHArray2OfXYZ.hxx
  PColgp_HArray1OfCirc2d.hxx
  PColgp_HArray1OfDir2d.hxx
  PColgp_HArray1OfDir.hxx
  PColgp_HArray1OfLin2d.hxx
  PColgp_HArray1OfPnt2d.hxx
  PColgp_HArray1OfPnt.hxx
  PColgp_HArray1OfVec2d.hxx
  PColgp_HArray1OfVec.hxx
  PColgp_HArray1OfXY.hxx
  PColgp_HArray1OfXYZ.hxx
  PColgp_HArray2OfCirc2d.hxx
  PColgp_HArray2OfDir2d.hxx
  PColgp_HArray2OfDir.hxx
  PColgp_HArray2OfLin2d.hxx
  PColgp_HArray2OfPnt2d.hxx
  PColgp_HArray2OfPnt.hxx
  PColgp_HArray2OfVec2d.hxx
  PColgp_HArray2OfVec.hxx
  PColgp_HArray2OfXY.hxx
  PColgp_HArray2OfXYZ.hxx
  PColgp_HSequenceOfDir.hxx
  PColgp_HSequenceOfPnt.hxx
  PColgp_HSequenceOfVec.hxx
  PColgp_HSequenceOfXYZ.hxx
  PColgp_SeqExplorerOfHSequenceOfDir.hxx
  PColgp_SeqExplorerOfHSequenceOfPnt.hxx
  PColgp_SeqExplorerOfHSequenceOfVec.hxx
  PColgp_SeqExplorerOfHSequenceOfXYZ.hxx
  PColgp_SeqNodeOfHSequenceOfDir.hxx
  PColgp_SeqNodeOfHSequenceOfPnt.hxx
  PColgp_SeqNodeOfHSequenceOfVec.hxx
  PColgp_SeqNodeOfHSequenceOfXYZ.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfCirc2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfDir2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfDir.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfLin2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfPnt2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfPnt.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfVec2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfVec.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfXY.hxx
  PColgp_VArrayNodeOfFieldOfHArray1OfXYZ.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfCirc2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfDir2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfDir.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfLin2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfPnt2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfPnt.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfVec2d.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfVec.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfXY.hxx
  PColgp_VArrayNodeOfFieldOfHArray2OfXYZ.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfCirc2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfDir2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfDir.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfLin2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfPnt2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfPnt.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfVec2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfVec.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfXY.hxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfXYZ.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfCirc2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfDir2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfDir.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfLin2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfPnt2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfPnt.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfVec2d.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfVec.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfXY.hxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfXYZ.hxx
  PGeom2d_AxisPlacement.hxx
  PGeom2d_AxisPlacement.ixx
  PGeom2d_AxisPlacement.jxx
  PGeom2d_BezierCurve.hxx
  PGeom2d_BezierCurve.ixx
  PGeom2d_BezierCurve.jxx
  PGeom2d_BoundedCurve.hxx
  PGeom2d_BoundedCurve.ixx
  PGeom2d_BoundedCurve.jxx
  PGeom2d_BSplineCurve.hxx
  PGeom2d_BSplineCurve.ixx
  PGeom2d_BSplineCurve.jxx
  PGeom2d_CartesianPoint.hxx
  PGeom2d_CartesianPoint.ixx
  PGeom2d_CartesianPoint.jxx
  PGeom2d_Circle.hxx
  PGeom2d_Circle.ixx
  PGeom2d_Circle.jxx
  PGeom2d_Conic.hxx
  PGeom2d_Conic.ixx
  PGeom2d_Conic.jxx
  PGeom2d_Curve.hxx
  PGeom2d_Curve.ixx
  PGeom2d_Curve.jxx
  PGeom2d_Direction.hxx
  PGeom2d_Direction.ixx
  PGeom2d_Direction.jxx
  PGeom2d_Ellipse.hxx
  PGeom2d_Ellipse.ixx
  PGeom2d_Ellipse.jxx
  PGeom2d_Geometry.hxx
  PGeom2d_Geometry.ixx
  PGeom2d_Geometry.jxx
  PGeom2d_Hyperbola.hxx
  PGeom2d_Hyperbola.ixx
  PGeom2d_Hyperbola.jxx
  PGeom2d_Line.hxx
  PGeom2d_Line.ixx
  PGeom2d_Line.jxx
  PGeom2d_OffsetCurve.hxx
  PGeom2d_OffsetCurve.ixx
  PGeom2d_OffsetCurve.jxx
  PGeom2d_Parabola.hxx
  PGeom2d_Parabola.ixx
  PGeom2d_Parabola.jxx
  PGeom2d_Point.hxx
  PGeom2d_Point.ixx
  PGeom2d_Point.jxx
  PGeom2d_Transformation.hxx
  PGeom2d_Transformation.ixx
  PGeom2d_Transformation.jxx
  PGeom2d_TrimmedCurve.hxx
  PGeom2d_TrimmedCurve.ixx
  PGeom2d_TrimmedCurve.jxx
  PGeom2d_Vector.hxx
  PGeom2d_Vector.ixx
  PGeom2d_Vector.jxx
  PGeom2d_VectorWithMagnitude.hxx
  PGeom2d_VectorWithMagnitude.ixx
  PGeom2d_VectorWithMagnitude.jxx
  PGeom_Axis1Placement.hxx
  PGeom_Axis1Placement.ixx
  PGeom_Axis1Placement.jxx
  PGeom_Axis2Placement.hxx
  PGeom_Axis2Placement.ixx
  PGeom_Axis2Placement.jxx
  PGeom_AxisPlacement.hxx
  PGeom_AxisPlacement.ixx
  PGeom_AxisPlacement.jxx
  PGeom_BezierCurve.hxx
  PGeom_BezierCurve.ixx
  PGeom_BezierCurve.jxx
  PGeom_BezierSurface.hxx
  PGeom_BezierSurface.ixx
  PGeom_BezierSurface.jxx
  PGeom_BoundedCurve.hxx
  PGeom_BoundedCurve.ixx
  PGeom_BoundedCurve.jxx
  PGeom_BoundedSurface.hxx
  PGeom_BoundedSurface.ixx
  PGeom_BoundedSurface.jxx
  PGeom_BSplineCurve.hxx
  PGeom_BSplineCurve.ixx
  PGeom_BSplineCurve.jxx
  PGeom_BSplineSurface.hxx
  PGeom_BSplineSurface.ixx
  PGeom_BSplineSurface.jxx
  PGeom_CartesianPoint.hxx
  PGeom_CartesianPoint.ixx
  PGeom_CartesianPoint.jxx
  PGeom_Circle.hxx
  PGeom_Circle.ixx
  PGeom_Circle.jxx
  PGeom_ConicalSurface.hxx
  PGeom_ConicalSurface.ixx
  PGeom_ConicalSurface.jxx
  PGeom_Conic.hxx
  PGeom_Conic.ixx
  PGeom_Conic.jxx
  PGeom_Curve.hxx
  PGeom_Curve.ixx
  PGeom_Curve.jxx
  PGeom_CylindricalSurface.hxx
  PGeom_CylindricalSurface.ixx
  PGeom_CylindricalSurface.jxx
  PGeom_Direction.hxx
  PGeom_Direction.ixx
  PGeom_Direction.jxx
  PGeom_ElementarySurface.hxx
  PGeom_ElementarySurface.ixx
  PGeom_ElementarySurface.jxx
  PGeom_Ellipse.hxx
  PGeom_Ellipse.ixx
  PGeom_Ellipse.jxx
  PGeom_Geometry.hxx
  PGeom_Geometry.ixx
  PGeom_Geometry.jxx
  PGeom_Hyperbola.hxx
  PGeom_Hyperbola.ixx
  PGeom_Hyperbola.jxx
  PGeom_Line.hxx
  PGeom_Line.ixx
  PGeom_Line.jxx
  PGeom_OffsetCurve.hxx
  PGeom_OffsetCurve.ixx
  PGeom_OffsetCurve.jxx
  PGeom_OffsetSurface.hxx
  PGeom_OffsetSurface.ixx
  PGeom_OffsetSurface.jxx
  PGeom_Parabola.hxx
  PGeom_Parabola.ixx
  PGeom_Parabola.jxx
  PGeom_Plane.hxx
  PGeom_Plane.ixx
  PGeom_Plane.jxx
  PGeom_Point.hxx
  PGeom_Point.ixx
  PGeom_Point.jxx
  PGeom_RectangularTrimmedSurface.hxx
  PGeom_RectangularTrimmedSurface.ixx
  PGeom_RectangularTrimmedSurface.jxx
  PGeom_SphericalSurface.hxx
  PGeom_SphericalSurface.ixx
  PGeom_SphericalSurface.jxx
  PGeom_Surface.hxx
  PGeom_Surface.ixx
  PGeom_Surface.jxx
  PGeom_SurfaceOfLinearExtrusion.hxx
  PGeom_SurfaceOfLinearExtrusion.ixx
  PGeom_SurfaceOfLinearExtrusion.jxx
  PGeom_SurfaceOfRevolution.hxx
  PGeom_SurfaceOfRevolution.ixx
  PGeom_SurfaceOfRevolution.jxx
  PGeom_SweptSurface.hxx
  PGeom_SweptSurface.ixx
  PGeom_SweptSurface.jxx
  PGeom_ToroidalSurface.hxx
  PGeom_ToroidalSurface.ixx
  PGeom_ToroidalSurface.jxx
  PGeom_Transformation.hxx
  PGeom_Transformation.ixx
  PGeom_Transformation.jxx
  PGeom_TrimmedCurve.hxx
  PGeom_TrimmedCurve.ixx
  PGeom_TrimmedCurve.jxx
  PGeom_Vector.hxx
  PGeom_Vector.ixx
  PGeom_Vector.jxx
  PGeom_VectorWithMagnitude.hxx
  PGeom_VectorWithMagnitude.ixx
  PGeom_VectorWithMagnitude.jxx
  PPoly_FieldOfHArray1OfTriangle.hxx
  PPoly_HArray1OfTriangle.hxx
  PPoly_Polygon2D.hxx
  PPoly_Polygon2D.ixx
  PPoly_Polygon2D.jxx
  PPoly_Polygon3D.hxx
  PPoly_Polygon3D.ixx
  PPoly_Polygon3D.jxx
  PPoly_PolygonOnTriangulation.hxx
  PPoly_PolygonOnTriangulation.ixx
  PPoly_PolygonOnTriangulation.jxx
  PPoly_Triangle.hxx
  PPoly_Triangle.ixx
  PPoly_Triangle.jxx
  PPoly_Triangulation.hxx
  PPoly_Triangulation.ixx
  PPoly_Triangulation.jxx
  PPoly_VArrayNodeOfFieldOfHArray1OfTriangle.hxx
  PPoly_VArrayTNodeOfFieldOfHArray1OfTriangle.hxx
  PTopLoc_Datum3D.hxx
  PTopLoc_Datum3D.ixx
  PTopLoc_Datum3D.jxx
  PTopLoc_ItemLocation.hxx
  PTopLoc_ItemLocation.ixx
  PTopLoc_ItemLocation.jxx
  PTopLoc_Location.hxx
  PTopLoc_Location.ixx
  PTopLoc_Location.jxx
  PTopoDS_Compound.hxx
  PTopoDS_Compound.ixx
  PTopoDS_Compound.jxx
  PTopoDS_CompSolid.hxx
  PTopoDS_CompSolid.ixx
  PTopoDS_CompSolid.jxx
  PTopoDS_Edge.hxx
  PTopoDS_Edge.ixx
  PTopoDS_Edge.jxx
  PTopoDS_Face.hxx
  PTopoDS_Face.ixx
  PTopoDS_Face.jxx
  PTopoDS_FieldOfHArray1OfHShape.hxx
  PTopoDS_FieldOfHArray1OfShape1.hxx
  PTopoDS_HArray1OfHShape.hxx
  PTopoDS_HArray1OfShape1.hxx
  PTopoDS_HShape.hxx
  PTopoDS_HShape.ixx
  PTopoDS_HShape.jxx
  PTopoDS_Shape1.hxx
  PTopoDS_Shape1.ixx
  PTopoDS_Shape1.jxx
  PTopoDS_Shell.hxx
  PTopoDS_Shell.ixx
  PTopoDS_Shell.jxx
  PTopoDS_Solid.hxx
  PTopoDS_Solid.ixx
  PTopoDS_Solid.jxx
  PTopoDS_TCompound1.hxx
  PTopoDS_TCompound1.ixx
  PTopoDS_TCompound1.jxx
  PTopoDS_TCompound.hxx
  PTopoDS_TCompound.ixx
  PTopoDS_TCompound.jxx
  PTopoDS_TCompSolid1.hxx
  PTopoDS_TCompSolid1.ixx
  PTopoDS_TCompSolid1.jxx
  PTopoDS_TCompSolid.hxx
  PTopoDS_TCompSolid.ixx
  PTopoDS_TCompSolid.jxx
  PTopoDS_TEdge1.hxx
  PTopoDS_TEdge1.ixx
  PTopoDS_TEdge1.jxx
  PTopoDS_TEdge.hxx
  PTopoDS_TEdge.ixx
  PTopoDS_TEdge.jxx
  PTopoDS_TFace1.hxx
  PTopoDS_TFace1.ixx
  PTopoDS_TFace1.jxx
  PTopoDS_TFace.hxx
  PTopoDS_TFace.ixx
  PTopoDS_TFace.jxx
  PTopoDS_TShape1.hxx
  PTopoDS_TShape1.ixx
  PTopoDS_TShape1.jxx
  PTopoDS_TShape.hxx
  PTopoDS_TShape.ixx
  PTopoDS_TShape.jxx
  PTopoDS_TShell1.hxx
  PTopoDS_TShell1.ixx
  PTopoDS_TShell1.jxx
  PTopoDS_TShell.hxx
  PTopoDS_TShell.ixx
  PTopoDS_TShell.jxx
  PTopoDS_TSolid1.hxx
  PTopoDS_TSolid1.ixx
  PTopoDS_TSolid1.jxx
  PTopoDS_TSolid.hxx
  PTopoDS_TSolid.ixx
  PTopoDS_TSolid.jxx
  PTopoDS_TVertex1.hxx
  PTopoDS_TVertex1.ixx
  PTopoDS_TVertex1.jxx
  PTopoDS_TVertex.hxx
  PTopoDS_TVertex.ixx
  PTopoDS_TVertex.jxx
  PTopoDS_TWire1.hxx
  PTopoDS_TWire1.ixx
  PTopoDS_TWire1.jxx
  PTopoDS_TWire.hxx
  PTopoDS_TWire.ixx
  PTopoDS_TWire.jxx
  PTopoDS_VArrayNodeOfFieldOfHArray1OfHShape.hxx
  PTopoDS_VArrayNodeOfFieldOfHArray1OfShape1.hxx
  PTopoDS_VArrayTNodeOfFieldOfHArray1OfHShape.hxx
  PTopoDS_VArrayTNodeOfFieldOfHArray1OfShape1.hxx
  PTopoDS_Vertex.hxx
  PTopoDS_Vertex.ixx
  PTopoDS_Vertex.jxx
  PTopoDS_Wire.hxx
  PTopoDS_Wire.ixx
  PTopoDS_Wire.jxx
  )

# --- sources ---

SET(GEOM_SOURCES
  MgtBRep.cxx
  MgtBRep_TranslateTool1.cxx
  MgtBRep_TranslateTool.cxx
  MgtGeom2d.cxx
  MgtGeom.cxx
  MgtPoly.cxx
  MgtTopLoc.cxx
  MgtTopoDS.cxx
  MgtTopoDS_TranslateTool1.cxx
  MgtTopoDS_TranslateTool.cxx
  PBRep_Curve3D.cxx
  PBRep_CurveOn2Surfaces.cxx
  PBRep_CurveOnClosedSurface.cxx
  PBRep_CurveOnSurface.cxx
  PBRep_CurveRepresentation.cxx
  PBRep_GCurve.cxx
  PBRep_PointOnCurve.cxx
  PBRep_PointOnCurveOnSurface.cxx
  PBRep_PointOnSurface.cxx
  PBRep_PointRepresentation.cxx
  PBRep_PointsOnSurface.cxx
  PBRep_Polygon3D.cxx
  PBRep_PolygonOnClosedSurface.cxx
  PBRep_PolygonOnClosedTriangulation.cxx
  PBRep_PolygonOnSurface.cxx
  PBRep_PolygonOnTriangulation.cxx
  PBRep_TEdge1.cxx
  PBRep_TEdge.cxx
  PBRep_TFace1.cxx
  PBRep_TFace.cxx
  PBRep_TVertex1.cxx
  PBRep_TVertex.cxx
  PColgp_FieldOfHArray1OfCirc2d_0.cxx
  PColgp_FieldOfHArray1OfDir_0.cxx
  PColgp_FieldOfHArray1OfDir2d_0.cxx
  PColgp_FieldOfHArray1OfLin2d_0.cxx
  PColgp_FieldOfHArray1OfPnt_0.cxx
  PColgp_FieldOfHArray1OfPnt2d_0.cxx
  PColgp_FieldOfHArray1OfVec_0.cxx
  PColgp_FieldOfHArray1OfVec2d_0.cxx
  PColgp_FieldOfHArray1OfXY_0.cxx
  PColgp_FieldOfHArray1OfXYZ_0.cxx
  PColgp_FieldOfHArray2OfCirc2d_0.cxx
  PColgp_FieldOfHArray2OfDir_0.cxx
  PColgp_FieldOfHArray2OfDir2d_0.cxx
  PColgp_FieldOfHArray2OfLin2d_0.cxx
  PColgp_FieldOfHArray2OfPnt_0.cxx
  PColgp_FieldOfHArray2OfPnt2d_0.cxx
  PColgp_FieldOfHArray2OfVec_0.cxx
  PColgp_FieldOfHArray2OfVec2d_0.cxx
  PColgp_FieldOfHArray2OfXY_0.cxx
  PColgp_FieldOfHArray2OfXYZ_0.cxx
  PColgp_HArray1OfCirc2d_0.cxx
  PColgp_HArray1OfDir_0.cxx
  PColgp_HArray1OfDir2d_0.cxx
  PColgp_HArray1OfLin2d_0.cxx
  PColgp_HArray1OfPnt_0.cxx
  PColgp_HArray1OfPnt2d_0.cxx
  PColgp_HArray1OfVec_0.cxx
  PColgp_HArray1OfVec2d_0.cxx
  PColgp_HArray1OfXY_0.cxx
  PColgp_HArray1OfXYZ_0.cxx
  PColgp_HArray2OfCirc2d_0.cxx
  PColgp_HArray2OfDir_0.cxx
  PColgp_HArray2OfDir2d_0.cxx
  PColgp_HArray2OfLin2d_0.cxx
  PColgp_HArray2OfPnt_0.cxx
  PColgp_HArray2OfPnt2d_0.cxx
  PColgp_HArray2OfVec_0.cxx
  PColgp_HArray2OfVec2d_0.cxx
  PColgp_HArray2OfXY_0.cxx
  PColgp_HArray2OfXYZ_0.cxx
  PColgp_HSequenceOfDir_0.cxx
  PColgp_HSequenceOfPnt_0.cxx
  PColgp_HSequenceOfVec_0.cxx
  PColgp_HSequenceOfXYZ_0.cxx
  PColgp_SeqExplorerOfHSequenceOfDir_0.cxx
  PColgp_SeqExplorerOfHSequenceOfPnt_0.cxx
  PColgp_SeqExplorerOfHSequenceOfVec_0.cxx
  PColgp_SeqExplorerOfHSequenceOfXYZ_0.cxx
  PColgp_SeqNodeOfHSequenceOfDir_0.cxx
  PColgp_SeqNodeOfHSequenceOfPnt_0.cxx
  PColgp_SeqNodeOfHSequenceOfVec_0.cxx
  PColgp_SeqNodeOfHSequenceOfXYZ_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfCirc2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfDir_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfDir2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfLin2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfPnt_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfPnt2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfVec_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfVec2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfXY_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray1OfXYZ_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfCirc2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfDir_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfDir2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfLin2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfPnt_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfPnt2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfVec_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfVec2d_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfXY_0.cxx
  PColgp_VArrayNodeOfFieldOfHArray2OfXYZ_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfCirc2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfDir_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfDir2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfLin2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfPnt_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfPnt2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfVec_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfVec2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfXY_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray1OfXYZ_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfCirc2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfDir_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfDir2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfLin2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfPnt_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfPnt2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfVec_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfVec2d_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfXY_0.cxx
  PColgp_VArrayTNodeOfFieldOfHArray2OfXYZ_0.cxx
  PGeom2d_AxisPlacement.cxx
  PGeom2d_BezierCurve.cxx
  PGeom2d_BoundedCurve.cxx
  PGeom2d_BSplineCurve.cxx
  PGeom2d_CartesianPoint.cxx
  PGeom2d_Circle.cxx
  PGeom2d_Conic.cxx
  PGeom2d_Curve.cxx
  PGeom2d_Direction.cxx
  PGeom2d_Ellipse.cxx
  PGeom2d_Geometry.cxx
  PGeom2d_Hyperbola.cxx
  PGeom2d_Line.cxx
  PGeom2d_OffsetCurve.cxx
  PGeom2d_Parabola.cxx
  PGeom2d_Point.cxx
  PGeom2d_Transformation.cxx
  PGeom2d_TrimmedCurve.cxx
  PGeom2d_Vector.cxx
  PGeom2d_VectorWithMagnitude.cxx
  PGeom_Axis1Placement.cxx
  PGeom_Axis2Placement.cxx
  PGeom_AxisPlacement.cxx
  PGeom_BezierCurve.cxx
  PGeom_BezierSurface.cxx
  PGeom_BoundedCurve.cxx
  PGeom_BoundedSurface.cxx
  PGeom_BSplineCurve.cxx
  PGeom_BSplineSurface.cxx
  PGeom_CartesianPoint.cxx
  PGeom_Circle.cxx
  PGeom_ConicalSurface.cxx
  PGeom_Conic.cxx
  PGeom_Curve.cxx
  PGeom_CylindricalSurface.cxx
  PGeom_Direction.cxx
  PGeom_ElementarySurface.cxx
  PGeom_Ellipse.cxx
  PGeom_Geometry.cxx
  PGeom_Hyperbola.cxx
  PGeom_Line.cxx
  PGeom_OffsetCurve.cxx
  PGeom_OffsetSurface.cxx
  PGeom_Parabola.cxx
  PGeom_Plane.cxx
  PGeom_Point.cxx
  PGeom_RectangularTrimmedSurface.cxx
  PGeom_SphericalSurface.cxx
  PGeom_Surface.cxx
  PGeom_SurfaceOfLinearExtrusion.cxx
  PGeom_SurfaceOfRevolution.cxx
  PGeom_SweptSurface.cxx
  PGeom_ToroidalSurface.cxx
  PGeom_Transformation.cxx
  PGeom_TrimmedCurve.cxx
  PGeom_Vector.cxx
  PGeom_VectorWithMagnitude.cxx
  PPoly_FieldOfHArray1OfTriangle_0.cxx
  PPoly_HArray1OfTriangle_0.cxx
  PPoly_Polygon2D.cxx
  PPoly_Polygon3D.cxx
  PPoly_PolygonOnTriangulation.cxx
  PPoly_Triangle.cxx
  PPoly_Triangulation.cxx
  PPoly_VArrayNodeOfFieldOfHArray1OfTriangle_0.cxx
  PPoly_VArrayTNodeOfFieldOfHArray1OfTriangle_0.cxx
  PTopLoc_Datum3D.cxx
  PTopLoc_ItemLocation.cxx
  PTopLoc_Location.cxx
  PTopoDS_Compound.cxx
  PTopoDS_CompSolid.cxx
  PTopoDS_Edge.cxx
  PTopoDS_Face.cxx
  PTopoDS_FieldOfHArray1OfHShape_0.cxx
  PTopoDS_FieldOfHArray1OfShape1_0.cxx
  PTopoDS_HArray1OfHShape_0.cxx
  PTopoDS_HArray1OfShape1_0.cxx
  PTopoDS_HShape.cxx
  PTopoDS_Shape1.cxx
  PTopoDS_Shell.cxx
  PTopoDS_Solid.cxx
  PTopoDS_TCompound1.cxx
  PTopoDS_TCompound.cxx
  PTopoDS_TCompSolid1.cxx
  PTopoDS_TCompSolid.cxx
  PTopoDS_TEdge1.cxx
  PTopoDS_TEdge.cxx
  PTopoDS_TFace1.cxx
  PTopoDS_TFace.cxx
  PTopoDS_TShape1.cxx
  PTopoDS_TShape.cxx
  PTopoDS_TShell1.cxx
  PTopoDS_TShell.cxx
  PTopoDS_TSolid1.cxx
  PTopoDS_TSolid.cxx
  PTopoDS_TVertex1.cxx
  PTopoDS_TVertex.cxx
  PTopoDS_TWire1.cxx
  PTopoDS_TWire.cxx
  PTopoDS_VArrayNodeOfFieldOfHArray1OfHShape_0.cxx
  PTopoDS_VArrayNodeOfFieldOfHArray1OfShape1_0.cxx
  PTopoDS_VArrayTNodeOfFieldOfHArray1OfHShape_0.cxx
  PTopoDS_VArrayTNodeOfFieldOfHArray1OfShape1_0.cxx
  PTopoDS_Vertex.cxx
  PTopoDS_Wire.cxx
  )

# --- rules ---

ADD_LIBRARY(TKPShape ${GEOM_SOURCES})
TARGET_LINK_LIBRARIES(TKPShape ${_link_LIBRARIES})
INSTALL(TARGETS TKPShape EXPORT ${PROJECT_NAME}TargetGroup DESTINATION ${SALOME_INSTALL_LIBS})

INSTALL(FILES ${GEOM_HEADERS} DESTINATION ${SALOME_INSTALL_HEADERS})
